# Furniture_OnlineShop

./: README.md  pyproject.toml
main/: views.py
main/templates/main/: about.html  base.html  index.html
main/templates/main/includes/: cart_button.html
src/: asgi.py  settings.py  urls.py  wsgi.py
