[tool.poetry]
name = "furniture-onlineshop"
version = "0.1.0"
description = ""
authors = ["HowletH1 <danila23482@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
environs = "^11.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
